# qrtext

./: .dockerignore  CHANGELOG.md  Dockerfile  README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/: ci.Dockerfile  docker-build.sh
.github/workflows/: build-appimage.yml  build.yml
public/: pin.html
scripts/: build-on-kylin.sh  bump-version.cjs  check-compat.sh  docker-build.sh  docker-entrypoint.sh  generate-icons.cjs  patch-appimage.sh  release.cjs
src/: App.vue  style.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: FloatingScreenshot.vue  Icon.vue  ScreenshotCapture.vue  ScreenshotEditor.vue  ScreenshotHistory.vue  StickyNote.vue
src/composables/: useDrawingTools.ts  useHistory.ts
