[package]
name = "qrtext"
version = "0.1.0"
description = "QRTEXT - A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "qrtext_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.3", features = ["image-png"] }
tauri-plugin-log = "2"
tauri-plugin-clipboard-manager = "2"
base64 = "0.22"
urlencoding = "2"
xcap = "0.5"
image = "0.25"

# ── 针对老旧 Linux（麒麟 SP1 V10）的编译优化 ──
# 减小二进制体积、降低运行时内存占用
[profile.release]
opt-level = "s"       # 优化体积（比 "z" 更稳定）
lto = true            # 链接时优化，减小体积
codegen-units = 1     # 单编译单元，更好的内联和优化
strip = "symbols"     # 去除符号表
panic = "abort"       # 减小 unwinding 开销
